--- a/TestSpringBoot/src/main/resources/application.properties
+++ b/TestSpringBoot/src/main/resources/application.properties
@@ -5,19 +5,20 @@ spring.data.mongodb.database=testDb
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.mongodb.embedded.version=4.0.0
+spring.datasource.hikari.maximum-pool-size=50
 
-spring.cache.type=redis
+#spring.cache.type=redis
 
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.password= 
+#spring.redis.host=localhost
+#spring.redis.port=6379
+#spring.redis.password= 
 
-spring.redis.lettuce.pool.max-active=7 
-spring.redis.lettuce.pool.max-idle=7
-spring.redis.lettuce.pool.min-idle=2
-spring.redis.lettuce.pool.max-wait=-1ms
-spring.redis.lettuce.shutdown-timeout=200ms
+#spring.redis.lettuce.pool.max-active=7 
+#spring.redis.lettuce.pool.max-idle=7
+#spring.redis.lettuce.pool.min-idle=2
+#spring.redis.lettuce.pool.max-wait=-1ms
+#spring.redis.lettuce.shutdown-timeout=200ms
 
-spring.cache.redis.cache-null-values=false
-spring.cache.redis.time-to-live=600000
-spring.cache.redis.use-key-prefix=true
+#spring.cache.redis.cache-null-values=false
+#spring.cache.redis.time-to-live=600000
+#spring.cache.redis.use-key-prefix=true
